--- a/requirements.txt
+++ b/requirements.txt
@@ -1,202 +1,143 @@
-absl-py==1.4.0
-aiohttp==3.8.1
-aiosignal==1.2.0
-anyio==3.6.2
+anyio==3.4.0
 appdirs==1.4.4
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.2.1
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==4.0.2
-attrs==22.2.0
+apturl==0.5.2
+argon2-cffi==21.1.0
+attrs==21.2.0
+Babel==2.9.1
 backcall==0.2.0
 backports.entry-points-selectable==1.1.1
-beautifulsoup4==4.11.1
-black==23.1a1
-bleach==6.0.0
-cachetools==5.3.0
-cachier==2.0.0
-certifi==2022.12.7
-cesium==0.10.2
-cffi==1.15.1
+bleach==4.1.0
+blinker==1.4
+Brlapi==0.7.0
+certifi==2019.11.28
+cffi==1.15.0
 cfgv==3.3.1
-chardet==5.1.0
-charset-normalizer==2.1.0
-click==8.1.3
-cloudpickle==2.2.1
-comm==0.1.2
-contourpy==1.0.7
+chardet==3.0.4
+Click==7.0
+colorama==0.4.3
+command-not-found==0.3
+contourpy==1.0.5
+cryptography==2.8
+cupshelpers==1.0
 cycler==0.11.0
-dask==2023.1.0
+dbus-python==1.2.16
 debugpy==1.5.1
-decorator==5.1.1
+decorator==5.1.0
+defer==1.0.6
 defusedxml==0.7.1
 distlib==0.3.3
-entrypoints==0.4
-executing==1.2.0
-fastjsonschema==2.16.2
+distro==1.4.0
+distro-info===0.23ubuntu1
+entrypoints==0.3
 filelock==3.4.0
-flake8==6.0.0
-flatbuffers==2.0
 fonttools==4.38.0
-frozenlist==1.3.0
-fsspec==2023.1.0
 future==0.18.2
-gast==0.5.3
-gatspy==0.3
-google-auth==2.16.0
-google-auth-oauthlib==0.8.0
-google-pasta==0.2.0
-grpcio==1.51.1
-h5py==3.8.0
+h5py==3.7.0
+httplib2==0.14.0
 identify==2.4.0
-idna==3.4
-imageio==2.19.3
-importlib-metadata==6.0.0
-importlib-resources==5.10.2
-ipykernel==6.20.2
-ipython==8.9.0
+idna==2.8
+importlib-resources==5.4.0
+ipykernel==6.6.0
+ipython==7.30.1
 ipython-genutils==0.2.0
-ipywidgets==8.0.4
-jedi==0.18.2
-Jinja2==3.1.2
-joblib==1.2.0
-jsonschema==4.17.3
-jupyter-client==8.0.1
-jupyter-core==5.1.5
-jupyter-events==0.6.3
-jupyter-server==2.1.0
-jupyter-server-terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.5
-keras==2.7.0
-Keras-Preprocessing==1.1.2
+ipywidgets==7.6.5
+jedi==0.18.1
+Jinja2==3.0.3
+json5==0.9.6
+jsonschema==4.2.1
+jupyter-client==7.1.0
+jupyter-core==4.9.1
+jupyter-server==1.12.1
+jupyterlab==3.2.4
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.8.2
+jupyterlab-widgets==1.0.2
+keyring==18.0.1
 kiwisolver==1.4.4
-lazy-loader==0.1rc2
-libclang==12.0.0
-littleutils==0.2.2
-locket==1.0.0
-Markdown==3.4.1
-MarkupSafe==2.1.2
-matplotlib==3.6.3
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+louis==3.12.0
+macaroonbakery==1.3.1
+MarkupSafe==2.0.1
+matplotlib==3.6.1
 matplotlib-inline==0.1.3
-mccabe==0.7.0
-mistune==2.0.4
-mlxtend==0.19.0
-mne==1.3.0
-multidict==6.0.2
-mypy-extensions==0.4.3
-nb-black==1.0.7
-nbclassic==0.5.1
-nbclient==0.7.2
-nbconvert==7.2.9
-nbformat==5.7.3
-nest-asyncio==1.5.6
+mistune==0.8.4
+mne==1.2.2
+nbclassic==0.3.4
+nbclient==0.5.9
+nbconvert==6.3.0
+nbformat==5.1.3
+nest-asyncio==1.5.4
+netifaces==0.10.4
 nodeenv==1.6.0
-notebook==6.5.2
-notebook-shim==0.2.2
-numpy==1.24.1
-oauthlib==3.2.2
-opt-einsum==3.3.0
-outdated==0.2.2
-packaging==23.0
-pandas==1.5.3
-pandas-flavor==0.3.0
+notebook==6.4.6
+numpy==1.23.4
+oauthlib==3.1.0
+olefile==0.46
+packaging==21.3
 pandocfilters==1.5.0
 parso==0.8.3
-partd==1.3.0
-pathspec==0.11.0
-pathtools==0.1.2
-patsy==0.5.3
-pexpect==4.8.0
+pexpect==4.6.0
 pickleshare==0.7.5
-Pillow==9.4.0
-pingouin==0.5.3
-pip-chill==1.0.1
-pkgutil-resolve-name==1.3.10
+Pillow==7.0.0
 platformdirs==2.4.0
-plotly==5.13.0
+plotly==4.14.3
 pooch==1.6.0
-portalocker==2.7.0
 pre-commit==2.16.0
-prometheus-client==0.16.0
-prompt-toolkit==3.0.36
-protobuf==4.21.12
-psutil==5.9.4
+prometheus-client==0.12.0
+prompt-toolkit==3.0.23
+protobuf==3.6.1
 ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.10.0
+pycairo==1.16.2
 pycparser==2.21
-pyflakes==3.0.1
-Pygments==2.14.0
+pycups==1.9.73
+Pygments==2.10.0
+PyGObject==3.36.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
 pymatreader==0.0.30
-pyparsing==3.0.9
-PyQt5==5.15.7
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.11.0
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-python-json-logger==2.0.4
-pytz==2022.7.1
-pyvista==0.34.1
-PyWavelets==1.4.1
-PyYAML==6.0
-pyzmq==25.0.0
-regex==2022.10.31
-requests==2.28.2
-requests-oauthlib==1.3.1
-retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rsa==4.9
-scikit-learn==1.2.1
-scipy==1.10.0
-scooby==0.5.12
-seaborn==0.12.2
+PyNaCl==1.3.0
+pyparsing==3.0.6
+pyRFC3339==1.1
+pyrsistent==0.18.0
+python-apt==2.0.0+ubuntu0.20.4.5
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
+pytz==2019.3
+pyxdg==0.26
+PyYAML==5.3.1
+pyzmq==22.3.0
+reportlab==3.5.34
+requests==2.22.0
+requests-unixsocket==0.2.0
+retrying==1.3.3
+scipy==1.9.3
+screen-resolution-extra==0.0.0
+SecretStorage==2.3.1
 Send2Trash==1.8.0
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-stack-data==0.6.2
-statsmodels==0.13.5
-tabulate==0.9.0
-tenacity==8.1.0
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.7.0
-tensorflow-estimator==2.7.0
-tensorflow-io-gcs-filesystem==0.22.0
-termcolor==2.2.0
-terminado==0.17.1
-testpath==0.6.0
-threadpoolctl==3.1.0
-tinycss2==1.2.1
+simplejson==3.16.0
+six==1.14.0
+sniffio==1.2.0
+systemd-python==234
+terminado==0.12.1
+testpath==0.5.0
 toml==0.10.2
-tomli==2.0.1
-toolz==0.12.0
-tornado==6.2
-tqdm==4.64.0
-traitlets==5.8.1
-typed-ast==1.5.4
-typing-extensions==4.4.0
-urllib3==1.26.14
+tornado==6.1
+tqdm==4.64.1
+traitlets==5.1.1
+ubuntu-advantage-tools==27.2
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
 virtualenv==20.10.0
-vtk==9.1.0
-watchdog==2.2.1
-wcwidth==0.2.6
+wadllib==1.3.3
+wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client==1.5.0
-Werkzeug==2.2.2
-widgetsnbextension==4.0.5
-wrapt==1.14.1
-wslink==1.6.5
-xarray==2022.12.0
+websocket-client==1.2.1
+widgetsnbextension==3.5.2
+xkit==0.0.0
 xmltodict==0.13.0
-xxhash==3.2.0
-yarl==1.7.2
-zipp==3.11.0
+zipp==3.6.0
