--- a/requirements.txt
+++ b/requirements.txt
@@ -1,237 +1,64 @@
-absl-py==1.4.0
-aiofiles==23.2.1
-aiohttp==3.8.1
-aiosignal==1.2.0
-anyio==3.6.2
-appdirs==1.4.4
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
 asttokens==2.2.1
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==4.0.2
-attrs==22.2.0
-autoreject==0.4.1
 backcall==0.2.0
-backports.entry-points-selectable==1.1.1
-beautifulsoup4==4.11.1
-black==18.6b4
-bleach==6.0.0
-cachetools==5.3.0
-cachier==2.0.0
-certifi==2022.12.7
-cesium==0.10.2
-cffi==1.15.1
-cfgv==3.3.1
-chardet==5.1.0
-charset-normalizer==2.1.0
-click==8.1.3
-cloudpickle==2.2.1
-comm==0.1.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
 contourpy==1.0.7
 cycler==0.11.0
-Cython==0.29.33
-dask==2023.1.0
-debugpy==1.5.1
-decorator==4.4.2
-defusedxml==0.7.1
-distlib==0.3.3
-entrypoints==0.4
-exceptiongroup==1.1.0
+Cython==0.29.35
+decorator==5.1.1
+exceptiongroup==1.1.1
 executing==1.2.0
-fastjsonschema==2.16.2
-filelock==3.4.0
-flake8==6.0.0
-flatbuffers==2.0
-fonttools==4.38.0
-frozenlist==1.3.0
-fsspec==2023.1.0
-future==0.18.2
-gast==0.5.3
-gatspy==0.3
-gglasso==0.1.9
-google-auth==2.16.0
-google-auth-oauthlib==0.8.0
-google-pasta==0.2.0
-graphql-core==3.2.3
-grpcio==1.51.1
-h11==0.14.0
-h5io==0.1.7
-h5py==3.8.0
-httpcore==1.0.5
-httpx==0.27.0
-identify==2.4.0
+fonttools==4.39.4
 idna==3.4
-imageio==2.19.3
-importlib-metadata==6.0.0
-importlib-resources==5.10.2
+importlib-metadata==6.6.0
+importlib-resources==5.12.0
 iniconfig==2.0.0
-install==1.3.5
-ipykernel==6.20.2
-ipython==8.9.0
+ipykernel==5.5.6
+ipython==8.12.2
 ipython-genutils==0.2.0
-ipywidgets==8.0.4
 jedi==0.18.2
-Jinja2==3.1.2
 joblib==1.2.0
-jsonschema==4.17.3
-jupyter-events==0.6.3
-jupyter_client==8.0.1
-jupyter_core==5.1.5
-jupyter_server==2.1.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.5
-keras==2.7.0
-Keras-Preprocessing==1.1.2
+jupyter_client==8.2.0
+jupyter_core==5.3.0
 kiwisolver==1.4.4
-lazy_loader==0.4
-libclang==12.0.0
-littleutils==0.2.2
-llvmlite==0.39.1
-locket==1.0.0
 lxml==4.9.2
-Markdown==3.4.1
-MarkupSafe==2.1.2
-matplotlib==3.6.3
-matplotlib-inline==0.1.3
-mccabe==0.7.0
-mistune==2.0.4
-mlxtend==0.19.0
-mne==1.4.0
-mne-bids==0.14
-multidict==6.0.2
-mypy-extensions==0.4.3
-nb-black==1.0.7
-nbclassic==0.5.1
-nbclient==0.7.2
-nbconvert==7.2.9
-nbformat==5.7.3
-nest-asyncio==1.5.6
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
 networkx==3.1
-nibabel==5.0.0
-nilearn==0.10.0
-nodeenv==1.6.0
+nibabel==5.1.0
+nilearn==0.10.1
 nose==1.3.7
-notebook==6.5.2
-notebook_shim==0.2.2
-numba==0.56.4
-numpy==1.23.0
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-oauthlib==3.2.2
-openneuro-py==2023.1.0
-opt-einsum==3.3.0
-outdated==0.2.2
-packaging==23.0
-pandas==1.5.3
-pandas-flavor==0.3.0
-pandocfilters==1.5.0
+numpy==1.24.3
+packaging==23.1
+pandas==2.0.2
 parso==0.8.3
-partd==1.3.0
-pathspec==0.11.0
-pathtools==0.1.2
-patsy==0.5.3
 pexpect==4.8.0
-pgmpy==0.1.21
 pickleshare==0.7.5
-Pillow==9.4.0
-pingouin==0.5.3
-pip-chill==1.0.1
-pkg_resources==0.0.0
-pkgutil_resolve_name==1.3.10
-platformdirs==2.4.0
-plotly==5.13.0
+Pillow==9.5.0
+platformdirs==3.5.1
 pluggy==1.0.0
-pooch==1.6.0
-portalocker==2.7.0
-pre-commit==2.16.0
-prometheus-client==0.16.0
-prompt-toolkit==3.0.36
-protobuf==4.21.12
-psutil==5.9.4
-psython==0.0.16
+prompt-toolkit==3.0.38
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.10.0
-pycparser==2.21
-pyflakes==3.0.1
-Pygments==2.14.0
-PyGSP==0.5.1
-pymatreader==0.0.30
+Pygments==2.15.1
 pyparsing==3.0.9
-PyQt5==5.15.7
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.11.0
-pyrsistent==0.19.3
-pytest==7.2.1
+pytest==7.3.1
 python-dateutil==2.8.2
-python-json-logger==2.0.4
-pytz==2022.7.1
-pyvista==0.34.1
-PyWavelets==1.4.1
-PyYAML==6.0
-pyzmq==25.0.0
-regain==0.3.3
-regex==2022.10.31
-requests==2.28.2
-requests-oauthlib==1.3.1
-retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rsa==4.9
-scikit-learn==1.2.1
-scipy==1.10.0
-scooby==0.5.12
+pytz==2023.3
+pyzmq==25.1.0
+requests==2.31.0
+scikit-learn==1.2.2
+scipy==1.10.1
 seaborn==0.12.2
-Send2Trash==1.8.0
-sgqlc==16.3
 six==1.16.0
-skggm==0.2.8
-sniffio==1.3.0
-soupsieve==2.3.2.post1
 stack-data==0.6.2
-statsmodels==0.13.5
 tabulate==0.7.5
-tenacity==8.1.0
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.7.0
-tensorflow-estimator==2.7.0
-tensorflow-io-gcs-filesystem==0.22.0
-termcolor==2.2.0
-terminado==0.17.1
-testpath==0.6.0
 threadpoolctl==3.1.0
-tinycss2==1.2.1
-toml==0.10.2
 tomli==2.0.1
-toolz==0.12.0
-torch==1.13.1
-tornado==6.2
-tqdm==4.64.0
-traitlets==5.8.1
-typed-ast==1.5.4
-typing_extensions==4.4.0
-urllib3==1.26.14
-virtualenv==20.10.0
-vtk==9.1.0
-watchdog==2.2.1
+tornado==6.3.2
+traitlets==5.9.0
+typing_extensions==4.6.3
+tzdata==2023.3
+urllib3==2.0.2
 wcwidth==0.2.6
-webencodings==0.5.1
-websocket-client==1.5.0
-Werkzeug==2.2.2
-widgetsnbextension==4.0.5
-wrapt==1.14.1
-wslink==1.6.5
-xarray==2022.12.0
-xmltodict==0.13.0
-xxhash==3.2.0
-yarl==1.7.2
-zipp==3.11.0
+zipp==3.15.0
